Implementação da API de pedidos: CRUD, mapeamento de campos e persistência em MongoDB (memory server). Endpoints conforme requisitos, tratamento de erros e respostas HTTP.

--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "node src/server.js",
-    "test": "echo \"No tests defined\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodrigoalgeri/Simple-API.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rodrigoalgeri/Simple-API/issues"
+  },
+  "homepage": "https://github.com/rodrigoalgeri/Simple-API#readme",
   "description": "",
   "dependencies": {
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "joi": "^18.0.2",
+    "mongodb-memory-server": "^10.3.0",
     "mongoose": "^9.0.0"
   }
 }
