--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 node_modules/
+data/*.db
 .env
-.DS_Store
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-coverage/
 *.log
-dist/
-tmp/
+.DS_Store
+coverage/
