--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "api-simple",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "API simples para gerenciar pedidos (CRUD) com SQLite",
+  "main": "src/server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "echo \"Nenhum linter configurado\"",
+    "typecheck": "echo \"Sem TypeScript\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rodrigoalgeri/Simple-API.git"
-  },
-  "keywords": [],
+  "keywords": ["express", "sqlite", "orders", "crud"],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rodrigoalgeri/Simple-API/issues"
-  },
-  "homepage": "https://github.com/rodrigoalgeri/Simple-API#readme",
-  "description": "",
+  "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0",
-    "mongodb-memory-server": "^10.3.0",
-    "mongoose": "^9.0.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
